--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>@groupId@</groupId>
-  <artifactId>@artifactId@</artifactId>
-  <version>@version@</version>
+  <groupId>groupId</groupId>
+  <artifactId>artifactId</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>@ant.project.name@</name>
-  <description>@description@</description>
-  <url>@project.url@</url>
+  <name>name</name>
+  <description>description</description>
+  <url>url</url>
 
   <licenses>
     <license>
@@ -19,9 +19,9 @@
 
   <scm>
     <connection>
-      scm:git:@project.repo.url@
+      scm:git:github.com/urso90/sample-java-project.git
     </connection>
-    <url>@project.scm.url@</url>
+    <url>https://github.com/urso90/sample-java-project.git</url>
   </scm>
 
   <developers>
